--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,7 +1,14 @@
 -----------------------------------------------------------------------------------
-3.4-Mod (02-??-2017)
+3.5-Mod (02-??-2017)
 
-NOTHING ATM
+--NOTHING ATM--
+
+-----------------------------------------------------------------------------------
+3.4-Mod (02-03-2017)
+Added 1 New Setting Items:
+  Windows Update Check Type
+  
+Also a few minor bug fixes
 
 -----------------------------------------------------------------------------------
 3.3-Mod (02-02-2017)
