--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,7 +1,8 @@
 -----------------------------------------------------------------------------------
-3.6-Mod (02-??-2017)
+?-Mod (02-??-2017)
 
-NOTHING ATM
+Working on a Menu Display (Win10-Menu.ps1)
+When done will be part of main script with ability to bypass for automation
 
 -----------------------------------------------------------------------------------
 3.5-Mod (02-09-2017)
