--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,6 +1,10 @@
 -----------------------------------------------------------------------------------
-1.0-Menu (02-??-2017) -START VERSION OF NEW SCRIPT
-In Testing ATM
+1.?-Menu (02-??-2017) 
+
+Nothing ATM
+
+-----------------------------------------------------------------------------------
+1.0-Menu (02-17-2017) -START VERSION OF NEW SCRIPT
 
 Done With adding a Menu
 
