--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,13 @@
 -----------------------------------------------------------------------------------
+1.1-Menu (02-19-2017) 
+
+Fixed 2 Bugs:
+If tos was set to accept in script it did not skip the tos
+fixed a messup with the add/remove/uninstall apps if you set it in script or file
+
+Working on making apps setting changeable in the menu
+
+-----------------------------------------------------------------------------------
 1.0-Menu (02-17-2017) -START VERSION OF NEW SCRIPT
 Done With adding a Menu
 
