--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,4 +1,9 @@
 -----------------------------------------------------------------------------------
+1.?-Menu (02-??-2017) 
+
+Nothing ATM
+
+-----------------------------------------------------------------------------------
 1.2-Menu (02-20-2017) 
 
 Metro Apps setting changeable in the menu
