--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,9 @@
 -----------------------------------------------------------------------------------
+1.2-Menu (02-20-2017) 
+
+Metro Apps setting changeable in the menu
+
+-----------------------------------------------------------------------------------
 1.1-Menu (02-19-2017) 
 
 Fixed 2 Bugs:
