--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,9 @@
 -----------------------------------------------------------------------------------
+1.3-Menu (02-27-2017) 
+
+Load/save setting fix
+
+-----------------------------------------------------------------------------------
 1.2-Menu (02-20-2017) 
 
 Metro Apps setting changeable in the menu
