--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,7 +1,7 @@
 -----------------------------------------------------------------------------------
-1.?-Menu (??-??-2017) 
+1.5-Menu (03-?-2017) 
 
-NOTHING ATM
+Added option to show/hide when an item is akipped
 
 -----------------------------------------------------------------------------------
 1.4-Menu (03-04-2017) 
