--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,4 +1,9 @@
 -----------------------------------------------------------------------------------
+1.?-Menu (??-??-2017) 
+
+Nothing ATM
+
+-----------------------------------------------------------------------------------
 1.5-Menu (03-12-2017) 
 
 Added option to show/hide when an item is skipped
