--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,5 +1,10 @@
 -----------------------------------------------------------------------------------
-1.8-Menu (03-??-2017) 
+1.?-Menu (03-??-2017) 
+
+Nothing ATM
+
+-----------------------------------------------------------------------------------
+1.8-Menu (03-19-2017) 
 
 Added Script update check option
 
