--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,5 +1,10 @@
 -----------------------------------------------------------------------------------
-1.9-Menu (04-??-2017) 
+?.?-Menu (04-??-2017) 
+
+NOTHIN ATM
+
+-----------------------------------------------------------------------------------
+1.9-Menu (04-08-2017) 
 
 Changed TOS Display look
 Added Internet Check if script checks for update
