--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -5,6 +5,7 @@ Internal Script Changes
 Fixed "Users File Icon on Desktop" showing as "Recycle Bin Icon on Desktop"
 Fixed "Removeing Recent Files in Quick Access" set incorrectly
 Fixed "Disabling Cast to Device Context" set incorrectly
+Change Powershell to Command Prompt (in Win+X)
 
 -----------------------------------------------------------------------------------
 1.9-Menu (04-08-2017) 
