--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ Fixed "Users File Icon on Desktop" showing as "Recycle Bin Icon on Desktop"
 Fixed "Removeing Recent Files in Quick Access" set incorrectly
 Fixed "Disabling Cast to Device Context" set incorrectly
 Change Powershell to Command Prompt (in Win+X)
+Changed the Internet check to ping github instead of google.com & yahoo.com
 
 -----------------------------------------------------------------------------------
 1.9-Menu (04-08-2017) 
