--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,8 +1,14 @@
 -----------------------------------------------------------------------------------
-2.1-Menu (05-12-2017) 
+2.1-Menu (05-13-2017) 
+
+Added check for (Bellow) before script attempts to Install/Uninstall
+Windows Media Player
+Work Folders Client
+Linux Subsystem
+Onedrive (checks for OneDriveSetup.exe)
 
 Minor changes in script
-Fixed bug with enable Windows Defender
+Fixed bug with enabling Windows Defender
 Fixed bug with smart screen and Wap push not disableing
 Fixed bug with metro apps
 Changed how Firewall is Enabled/Disabled
