--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -14,6 +14,7 @@ Changed/added different arguments/switches
    -dnr                       Do not restart when done
    
 Note: Settingfile = name of your setting file
+Note: Old arguments/switches will not work
 
 Change Window content while dragging items from enable/disable to show/hide
 Fixed a bug with windows update not setting if path not being there
