--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,35 @@
 -----------------------------------------------------------------------------------
-2.1-Menu (05-13-2017) 
+2.2-Menu (05-28-2017)
+
+Changed/added different arguments/switches
+   -run                       Runs script with setting in script
+   -run Settingfile           Runs script with Settingfile
+   -run WinDefault            Runs script with Win Default
+   -load Settingfile          Loads Settingfile (Does not run)
+   -load WinDefault           Loads Win Default (Does not run)
+   -sic                       Skip Internet Check
+   -usc                       Check for update
+   -atos                      Accepts ToS
+   -auto                      Closes on Errors, End of Script (Implies -atos)
+   -crp                       Creates a Restore Point
+   -dnr                       Do not restart when done
+
+Note: Settingfile = name of your setting file
+Note: Old arguments/switches will not work
+
+Change Window content while dragging items from enable/disable to show/hide
+Fixed a bug with windows update not setting if path was not there
+Fixed problem with remove cast to device context item
+Changed how script does detection for metro apps
+Fixed bug with unpin not being corrently set to unpin
+
+Changed format for setting save/load (smaller files and more readable)
+Ability to add custom apps to hide/uninstall in setting file
+
+NOTE: YOU WILL NEED TO MAKE A NEW SETTING FILE
+
+-----------------------------------------------------------------------------------
+2.1-Menu (05-13-2017)
 
 Added check for (Bellow) before script attempts to Install/Uninstall
 Windows Media Player
@@ -16,7 +46,7 @@ Added Ability to Show/Hide Task Manager details
 Fixed Load setting bug (Thanks to Scott C)
 
 -----------------------------------------------------------------------------------
-2.0-Menu (04-22-2017) 
+2.0-Menu (04-22-2017)
 
 Internal Script Changes
 Fixed "Users File Icon on Desktop" showing as "Recycle Bin Icon on Desktop"
@@ -26,7 +56,7 @@ Change Powershell to Command Prompt (in Win+X)
 Changed the Internet check to ping github instead of google.com & yahoo.com
 
 -----------------------------------------------------------------------------------
-1.9-Menu (04-08-2017) 
+1.9-Menu (04-08-2017)
 
 Added some updates to settings for creator's update
 Changed TOS Display look
@@ -58,7 +88,7 @@ Taptiles
 Twitter
 
 -----------------------------------------------------------------------------------
-1.8-Menu (03-19-2017) 
+1.8-Menu (03-19-2017)
 
 Added Script update check option
 
@@ -67,7 +97,7 @@ Please use the script for just the Black Viper Service configuration @
 https://github.com/madbomb122/BlackViperScript
 
 -----------------------------------------------------------------------------------
-1.7-Menu (03-17-2017) 
+1.7-Menu (03-17-2017)
 
 Fixed bug with using the bat file to run with setting file
 Fixed bug with add/remove pin to "quick access"
@@ -79,7 +109,7 @@ Removed Custom App Import in setting file (was causeing the apps to not Install/
 Disabled Black Viper Service configuration
 
 -----------------------------------------------------------------------------------
-1.5-Menu (03-12-2017) 
+1.5-Menu (03-12-2017)
 
 Added option to show/hide when an item is skipped
 Added a check if running in Powershell or Powershell ISE (ISE is not supported)
@@ -94,7 +124,7 @@ User's Files
 Control Panel
 
 -----------------------------------------------------------------------------------
-1.4-Menu (03-04-2017) 
+1.4-Menu (03-04-2017)
 
 Added Black Viper's service settings (Win 10 Home/Pro ONLY)
 Removed Lock Screen alt (script check run the correct lockscreen work around)
@@ -104,17 +134,17 @@ Added a display of skipped items
 https://github.com/madbomb122/BlackViperScript
 
 -----------------------------------------------------------------------------------
-1.3-Menu (02-27-2017) 
+1.3-Menu (02-27-2017)
 
 Load/save setting fix
 
 -----------------------------------------------------------------------------------
-1.2-Menu (02-20-2017) 
+1.2-Menu (02-20-2017)
 
 Metro Apps setting changeable in the menu
 
 -----------------------------------------------------------------------------------
-1.1-Menu (02-19-2017) 
+1.1-Menu (02-19-2017)
 
 Fixed 2 Bugs:
 If tos was set to accept in script it did not skip the tos
