--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,5 +1,7 @@
 -----------------------------------------------------------------------------------
-2.2-Menu (05-19-2017)
+2.2-Menu (05-28-2017)
+
+OLD SETTING FILES WILL NOT WORK
 
 Changed/added different arguments/switches
    -run                       Runs script with setting in script
@@ -10,22 +12,21 @@ Changed/added different arguments/switches
    -sic                       Skip Internet Check
    -usc                       Check for update
    -atos                      Accepts ToS
+   -auto                      Closes on Errors, End of Script (Implies -atos)
    -crp                       Creates a Restore Point
    -dnr                       Do not restart when done
-   
+
 Note: Settingfile = name of your setting file
 Note: Old arguments/switches will not work
 
 Change Window content while dragging items from enable/disable to show/hide
-Changed how script does detection for metro apps
 Fixed a bug with windows update not setting if path was not there
 Fixed problem with remove cast to device context item
+Changed how script does detection for metro apps
 Fixed bug with unpin not being corrently set to unpin
 
 Changed format for setting save/load (smaller files and more readable)
 Ability to add custom apps to hide/uninstall in setting file
-
-NOTE: YOU WILL NEED TO MAKE A NEW SETTING FILE
 
 -----------------------------------------------------------------------------------
 2.1-Menu (05-13-2017)
