--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,4 +1,11 @@
 -----------------------------------------------------------------------------------
+3.0.0-GUI (08-14-2017)
+
+Added Gui
+Added Minor Version
+Various Improvements
+
+-----------------------------------------------------------------------------------
 2.2-Menu (05-28-2017)
 
 OLD SETTING FILES WILL NOT WORK
