--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,7 +1,7 @@
 -----------------------------------------------------------------------------------
-3.0.0-GUI (08-14-2017)
+3.0.0-GUI (08-15-2017)
 
-Added Gui
+Changed Text Menu to Gui Menu
 Added Minor Version
 Various Improvements
 
