--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,4 +1,11 @@
 -----------------------------------------------------------------------------------
+3.0.0-GUI (08-15-2017)
+
+Changed Text Menu to Gui Menu
+Added Minor Version
+Various Improvements
+
+-----------------------------------------------------------------------------------
 2.2-Menu (05-28-2017)
 
 OLD SETTING FILES WILL NOT WORK
