--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,4 +1,9 @@
 -----------------------------------------------------------------------------------
+3.0.1 (08-16-2017)
+
+Added List for what is Unpined for the Unpined Item
+
+-----------------------------------------------------------------------------------
 3.0.0-GUI (08-16-2017)
 
 Changed Text Menu to Gui Menu
