--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,10 +1,19 @@
 -----------------------------------------------------------------------------------
-3.0.1 (08-15-2017)
+3.1.0 (08-26-2017)
 
 Added List for what is Unpined for the Unpined Item
 
+Renamed the Install in Metro to Unhide (you cant install metro apps w/o the appx file)
+Fixed a typo
+Added check for windows 10
+
+Fixed Bug with script downloading Newer version of script
+Script has option updates bat file with new script name if update is downloaded using script
+
+Updates will use Update.bat if avaiable (will overwrite script file instead of creating new file)
+
 -----------------------------------------------------------------------------------
-3.0.0-GUI (08-15-2017)
+3.0.0-GUI (08-16-2017)
 
 Changed Text Menu to Gui Menu
 Added Minor Version
