--- a/Testing/Changelog.txt
+++ b/Testing/Changelog.txt
@@ -1,9 +1,11 @@
 -----------------------------------------------------------------------------------
-3.1.2 (09-02-2017)
+3.1.3 (09-05-2017)
 
 Added Missing Items (MSRT Update, Driver Update, Restarte on Update)
 
 Fixed a typo that caused switch/arguments to not work and loading of settings
+
+Changed indent from spaces to tabs to decrease file size about 9 KB
 
 -----------------------------------------------------------------------------------
 3.1.0 (08-26-2017)
